--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ $('document').ready(function() {
    <div class="span3">
     <div class="row well heroblurb posts">
      <div class="header">Latest Version:</div>
-     <div class="version">2.4.1</div>
-     <div class="release">released on February 3rd, 2014</div>
+     <div class="version">2.4.2</div>
+     <div class="release">released on February 15th, 2014</div>
      <div><hr /></div>
      <div class="header latestnews">Latest News:</div>
 
