--- a/manuals/developer/index.html
+++ b/manuals/developer/index.html
@@ -115,39 +115,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="span8">
 <ul class="breadcrumb"><li><a href="/manuals">manuals</a> <span class="divider">/</span></li><li><a href="/manuals/developer">developer</a> <span class="divider">/</span></li><li class="active">Developer Guide</li></ul>
    <h1>Developer Guide</h1>
-<h2>About</h2>
-
-<p>Note that cobbler has its own development mailing list, which is:</p>
-
-<ul>
-<li> https://fedorahosted.org/mailman/listinfo/cobbler-devel</li>
-</ul>
-
-
-<h2>How To Contribute</h2>
-
-<p>Various information about how to get involved with the Cobbler project.</p>
-
-<ul>
-<li> <a href="Patch%20Process">Patch Process</a> -- How to contribute code/patches/docs</li>
-<li> <a href="Development%20Environment%20Tips">Development Environment</a> -- How to get your development setup going</li>
-</ul>
-
-
-<h2>First, Read The Source</h2>
-
-<p>We take pride in our user documentation, however the development documentation will largely point you at existing code files
-and examples, so you're expected to be able to read Python.  That should be ok though, Cobbler has been the first Python program a lot of our best contributors have worked with, and we want to keep everything simple to minimize levels of complexity for future contributors.</p>
-
-<h2>API</h2>
-
-<p>XMLRPC API is used to interact with cobbler via the cobblerd daemon.  In addition, cobbler can be extended via trigger modules (or scripts), as well as plugin modules.   If using Cobbler as service, start with the XMLRPC interface... accessing the Python code directly is not supported.</p>
-
-<ul>
-<li> <a href="XMLRPC">XMLRPC</a> -- main API walkthrough for end users</li>
-<li> <a href="Triggers">Triggers</a> -- triggers, do X when cobbler does Y</li>
-<li> <a href="Modules">Modules</a> -- extend Cobbler authentication, authorization, or serialization via plugins</li>
-</ul>
+<div class="toc"><ul class="dirtree"><li><a href="/manuals/developer/1_-_Development-environment-tips.html">1 - Development-environment-tips</a></li><li><a href="/manuals/developer/2_-_Patch-process.html">2 - Patch-process</a></li><li><a href="/manuals/developer/3_-_Xmlrpc.html">3 - Xmlrpc</a></li></ul></div>
 
 
      <hr>
